differential_testing/gcc_regression/gcc_reg_cb/results/gcc482/save_st/pr54760-4.c-4.8.2-2.out.txt
pr54760-4.c: In function ‘test01’:
pr54760-4.c:11:8: error: __builtin_thread_pointer is not supported on this target
   int* p = (int*)__builtin_thread_pointer ();
        ^
